--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "react-sample-project",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://szaker1990.github.io/Shopping_List/.",
   "main": "app.js",
   "scripts": {
     "start": "webpack-dev-server --hot -d",
     "build": "webpack -p",
-    "restApi": "json-server --watch data/books.json"
+    "restApi": "json-server --watch data/books.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -51,6 +54,7 @@
   "dependencies": {
     "cors-anywhere": "^0.4.3",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.2.0",
